Project

General

Profile

Actions

Bug #12713

closed

civetweb frontend: response is buffered in memory if content length is not explicitly specified

Added by Radoslaw Zarzynski over 8 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
High
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
mimic luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If content length is not explicitly specified by upper layer through a call to RGWMongoose::send_content_length(), civetweb frontend performs extensive buffering in order to properly calculate the size of a content and attach the Content-Length HTTP header. Please take a look on RGWMongoose::write_data() and RGWMongoose::complete_request() methods.


Related issues 2 (0 open2 closed)

Copied to rgw - Backport #39614: mimic: civetweb frontend: response is buffered in memory if content length is not explicitly specifiedResolvedCasey BodleyActions
Copied to rgw - Backport #39615: luminous: civetweb frontend: response is buffered in memory if content length is not explicitly specifiedResolvedNathan CutlerActions
Actions #1

Updated by Radoslaw Zarzynski over 8 years ago

  • Status changed from New to In Progress
  • Assignee set to Radoslaw Zarzynski
Actions #2

Updated by Robin Johnson over 5 years ago

I have a workaround-level fix for this here:
https://github.com/ceph/ceph/pull/23940

It causes the FE to avoid the buffering rather than disable it outright.

Actions #3

Updated by Casey Bodley almost 5 years ago

  • Status changed from In Progress to Pending Backport
  • Priority changed from Normal to High
  • Backport set to mimic luminous
  • Pull request ID set to 23940
Actions #4

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39614: mimic: civetweb frontend: response is buffered in memory if content length is not explicitly specified added
Actions #5

Updated by Nathan Cutler almost 5 years ago

  • Copied to Backport #39615: luminous: civetweb frontend: response is buffered in memory if content length is not explicitly specified added
Actions #6

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved".

Actions

Also available in: Atom PDF